# Laboratory_20

./: CMakeLists.txt  main.c
libs/algorithms/: algorithms.c  algorithms.h
libs/domain/: domain.h
libs/matrix/: matrix.c  matrix.h
libs/node/: node.c  node.h
libs/tests/: tests.c  tests.h
libs/vector/: vector.c  vector.h
